--- a/public/CommuterHomepage.html
+++ b/public/CommuterHomepage.html
@@ -11,51 +11,51 @@
   <script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
 </head>
 <body>
+  <div class="background"></div>
   <header>
     <nav>
       <div class="logo"><h2>Lakbay</h2></div>
-     <ul class="nav-links">
-  <li><a href="/">Home</a></li>
-    <!--Dropdown for routes-->
-  <li class="routes-dropdown">
-    <a href="#" id="routes-link">Routes ▼</a>
-    <ul class="dropdown-list" id="routes-list-dropdown">
-      <li><a href="#" data-start="Sta Maria RiverBank" data-end="Norzagaray">Sta Maria RiverBank - Norzagaray</a></li>
-      <li><a href="#" data-start="Sta Maria Wet Market" data-end="Norzagaray">Sta Maria Wet Market - Norzagaray</a></li>
-      <li><a href="#" data-start="San Mateo" data-end="Norzagaray">Sta Maria RiverBank - Muzon</a></li>
-    </ul>
-  </li>
-
-  <li><a href="#">Saved Trips</a></li>
-  <li><a href="#">Help</a></li>
-  <li><a href="RegistrationPage.html">Logout</a></li>
-</ul>
-
+      <button id="burger-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <ul class="nav-links">
+        <li><a href="/">Home</a></li>
+        <!--Dropdown for routes-->
+        <li class="routes-dropdown">
+          <a href="#" id="routes-link">Routes ▼</a>
+          <ul class="dropdown-list" id="routes-list-dropdown">
+            <li><a href="#" data-start="Sta Maria RiverBank" data-end="Norzagaray">Sta Maria RiverBank - Norzagaray</a></li>
+            <li><a href="#" data-start="Sta Maria Wet Market" data-end="Norzagaray">Sta Maria Wet Market - Norzagaray</a></li>
+            <li><a href="#" data-start="San Mateo" data-end="Norzagaray">Sta Maria RiverBank - Muzon</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Saved Trips</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="RegistrationPage.html">Logout</a></li>
+      </ul>
     </nav>
   </header>
   <!--Commuter Navigation-->
   <main>
     <section class="map-section">
       <h1>Commuter Dashboard</h1>
-      <div id="map" style="width:100%;height:500px;"></div>
-     <div id="directions-panel" style="width:350px;max-height:400px;overflow:auto;position:absolute;right:30px;top:120px;z-index:1000;background:rgba(255,255,255,0.95);border-radius:10px;padding:15px;box-shadow:0 2px 8px rgba(0,0,0,0.2);"></div>
-<button id="maximize-map">Maximize Map</button>
+      <div id="map" style="width:100%;height:calc(100vh - 200px);"></div>
+      <div id="directions-panel"></div>
       <div id="location-status">Waiting to start...</div>
-      <button id="track-btn">Start Tracking My Location Now</button>
-
-      <div class="controls">
-        <button id="show-btn">Show All Routes</button>
-        <button id="highlight-btn">Highlight Nearest Route</button>
-        <button id="clear-btn">Clear Destination</button>
-      </div>
-
+        <div class="controls">
+          <button id="show-btn">Show All Routes</button>
+          <button id="highlight-btn">Highlight Nearest Route</button>
+          <button id="clear-btn">Clear Destination</button>
+          <button id="track-btn">Start Tracking My Location Now</button>
+        </div>
       <div id="routes-list"></div>
     </section>
   </main>
-
   <footer>
     <p>© 2025 Lakbay. All rights reserved.</p>
   </footer>
-<script src="scripts/CommuterHP.js"></script>
+  <script src="scripts/CommuterHP.js"></script>
 </body>
 </html>
