--- a/public/DriverHomepage.html
+++ b/public/DriverHomepage.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <meta http-equiv="Content-Security-Policy" 
+      content="default-src 'self'; 
+               script-src 'self' https://unpkg.com https://cdnjs.cloudflare.com; 
+               style-src 'self' 'unsafe-inline' https://unpkg.com; 
+               img-src 'self' data: https://*.tile.openstreetmap.org https://*.openstreetmap.org;">
   <title>Lakbay | Driver Dashboard</title>
 
   <!-- Leaflet CSS -->
@@ -17,11 +22,18 @@
 </head>
 
 <body>
+  <div class="background"></div>
   <header>
+    
     <nav>
       <div class="logo">
         <h2>Lakbay</h2>
       </div>
+      <button id="burger-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
         <li><a href="#">Routes</a></li>
@@ -31,20 +43,14 @@
       </ul>
     </nav>
   </header>
-
+<div class="status-bar">
+    <button class="status-btn active">Docking</button>
+    <button class="status-btn">Loading</button>
+    <button class="status-btn">On Route</button>
+    <button class="status-btn">End</button>
+  </div>
   <main>
     <div class="dashboard-wrapper">
-      <aside class="ads-container">
-        <div class="ad-card">
-          <img src="public/img/ad1.jpg" alt="Ad 1">
-          <p>Keep your jeep in top condition with Lakbay's maintenance partners!</p>
-        </div>
-        <div class="ad-card">
-          <img src="public/img/ad2.jpg" alt="Ad 2">
-          <p>Drive smart, earn rewards! Join Lakbay’s incentive program.</p>
-        </div>
-      </aside>
-
       <section class="map-container">
         <div class="map-header">
           <h1>Driver Dashboard</h1>
@@ -53,34 +59,13 @@
 
         <div id="map"></div>
 
-        <div class="controls">
-          
-          <button id="start-driving">🚐 Start Driving</button>
-
-        </div>
+        <button id="start-driving">🚐 Start Driving</button>
 
         <p id="status">Click on the map to add waypoints for your route.<br>
           You can save multiple routes. Only the most recent will animate the jeepney.</p>
 
         <div id="routes-list"></div>
       </section>
-
-      <aside class="info-container">
-        <div class="info-card">
-          <h3>📦 Route Data for Commuter Dashboard</h3>
-          <textarea id="route-data" rows="10" readonly></textarea>
-        </div>
-
-        <div class="info-card">
-          <h3>📍 Waypoints</h3>
-          <div id="waypoint-list"></div>
-        </div>
-
-        <div class="ad-mini">
-          <img src="public/img/ad3.jpg" alt="Ad 3">
-        </div>
-      </aside>
-    </div>
   </main>
 
   <footer>
@@ -91,5 +76,7 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
   <script src="scripts/DriverHP.js"></script>
+
+ 
 </body>
 </html>
