--- a/public/LandingPage.html
+++ b/public/LandingPage.html
@@ -16,11 +16,11 @@
         <h2>Lakbay</h2>
       </div>
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">What is Lakbay?</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Register</a></li>
+        <li><a href="LandingPage.html">Home</a></li>
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="WhatIsLakbay.html">What is Lakbay?</a></li>
+        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="RegistrationPage.html">Register</a></li>
       </ul>
     </nav>
   </header>
