--- a/public/LoginPage.html
+++ b/public/LoginPage.html
@@ -26,8 +26,8 @@
       </div>
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Support</a></li>
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="Contact.html">Support</a></li>
       </ul>
     </nav>
   </header>
