--- a/public/RegistrationPage.html
+++ b/public/RegistrationPage.html
@@ -17,8 +17,8 @@
       </div>
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="Contact.html">Contact</a></li>
         <li><a href="LoginPage.html">Login</a></li>
       </ul>
     </nav>
