--- a/public/AboutUs.html
+++ b/public/AboutUs.html
@@ -174,7 +174,6 @@
     }
 
     ul li::before {
-      content: "🚍";
       position: absolute;
       left: 0;
       top: 0;
@@ -317,7 +316,7 @@
         <h2>Meet the Team</h2>
         <p>
           Established by a group of technology specialists and transportation industry veterans dedicated to Filipino innovation, 
-          <strong>LAKBAY</strong> is led by <strong>Rafael German</strong>, <strong>Emmanuel Gabriel Lasdoce</strong>, and <strong>Amiel Yancy Garcia</strong>. 
+          <strong>LAKBAY</strong> is led by <strong>Rafael German</strong>, <strong>Emmanuel Gabriel Lasdoce</strong>,<strong> Kevin De Jesus</strong>,<strong > Mark Christian Joaquin</strong>,<strong> Aldrin Cantiga</strong>, and <strong> Amiel Yancy Garcia</strong>. 
           Together, they bring expertise in app development, user experience, and local transport dynamics to drive our vision forward. 
           We remain devoted to evolving alongside our users, refining the application through ongoing feedback and collaboration.
         </p>
