--- a/public/CommuterHomepage.html
+++ b/public/CommuterHomepage.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Lakbay | Commuter Dashboard</title>
-
+  <script src="/public/scripts/burger-fix.js"></script>
   <link rel="stylesheet" href="styles/leaflet.css" />
 
   <!-- routing CSS (optional to host locally) -->
@@ -21,6 +21,8 @@
 
   <!-- Force Leaflet default icon paths to /icons (served from self so CSP allows it) -->
   <script src="scripts/leaflet-icons.js"></script>
+
+ 
 </head>
 <body>
   <div class="background"></div>
