--- a/public/DriverHomepage.html
+++ b/public/DriverHomepage.html
@@ -9,7 +9,7 @@
                style-src 'self' 'unsafe-inline' https://unpkg.com; 
                img-src 'self' data: https://*.tile.openstreetmap.org https://*.openstreetmap.org;">
   <title>Lakbay | Driver Dashboard</title>
-
+  <script src="/public/scripts/burger-fix.js"></script>
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css" />
@@ -19,6 +19,7 @@
 
   <!-- Optional: Leaflet Editable -->
   <script src="https://unpkg.com/leaflet-editable/dist/Leaflet.Editable.min.js"></script>
+  
 </head>
 
 <body>
