--- a/public/RegistrationPage.html
+++ b/public/RegistrationPage.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lakbay | Register</title>
   <link rel="stylesheet" href="styles/RegistrationPage.css" />
+  
   <link rel="icon" type="image/x-icon" href="img/jeepney.ico">
 </head>
 
@@ -40,7 +41,7 @@
           <div class="form-fields"></div>
           <button type="submit" class="submit-btn">Register</button>
         </form>
-        <p class="redirect">Already have an account? <a href="LoginPage.html">Login here</a></p>
+        <p class="redirect">Already have an account? <a href="LandingPage.html">Login here</a></p>
         <p id="status-message"></p>
       </div>
     </section>
