--- a/public/LoginPage.html
+++ b/public/LoginPage.html
@@ -13,6 +13,9 @@
   <script src="scripts/LoginPage.js" defer></script>
   <!-- optional: include web fallback tracker if you added it -->
   <script src="scripts/webLocationTracker.js" defer></script>
+  <!-- font awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 
 <body>
