--- a/public/RegistrationPage.html
+++ b/public/RegistrationPage.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lakbay | Register</title>
   <link rel="stylesheet" href="styles/RegistrationPage.css" />
-  
   <link rel="icon" type="image/x-icon" href="img/jeepney.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
-    <div class="overlay"></div>
+  <div class="overlay"></div>
   <header>
     <nav>
       <div class="logo">
         <h2>Lakbay</h2>
       </div>
       <ul class="nav-links">
-        <li><a href="/">Home</a></li>
+        <li><a href="LandingPage.html">Home</a></li>
         <li><a href="AboutUs.html">About Us</a></li>
         <li><a href="Contact.html">Contact</a></li>
         <li><a href="LoginPage.html">Login</a></li>
@@ -37,11 +37,11 @@
           <button class="role-btn" data-role="fleet">Fleet Manager</button>
         </div>
 
-        <form id="register-form">
+        <form id="register-form" novalidate>
           <div class="form-fields"></div>
           <button type="submit" class="submit-btn">Register</button>
         </form>
-        <p class="redirect">Already have an account? <a href="LandingPage.html">Login here</a></p>
+        <p class="redirect">Already have an account? <a href="LoginPage.html">Login here</a></p>
         <p id="status-message"></p>
       </div>
     </section>
