--- a/public/WhatIsLakbay.html
+++ b/public/WhatIsLakbay.html
@@ -5,303 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>What is Lakbay? | Lakbay</title>
   <link rel="icon" type="image/x-icon" href="img/jeepney.ico">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    body {
-      color: white;
-      overflow-x: hidden;
-      min-height: 100vh;
-      background: url('img/bg.jpg') center center / cover no-repeat fixed;
-      position: relative;
-    }
-
-    header {
-      background: rgba(0, 0, 0, 0.65);
-      backdrop-filter: blur(10px);
-      position: sticky;
-      top: 0;
-      width: 100%;
-      z-index: 1000;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-    }
-
-    nav {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .logo h2 {
-      color: #ffc300;
-      font-size: 1.9rem;
-      letter-spacing: 1px;
-      cursor: pointer;
-    }
-
-    .nav-links {
-      list-style: none;
-      display: flex;
-      gap: 2rem;
-    }
-
-    .nav-links a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 500;
-      transition: 0.3s;
-    }
-
-    .nav-links a:hover {
-      color: #ffc300;
-    }
-
-    .nav-links a.active {
-      color: #ffc300;
-      border-bottom: 2px solid #ffc300;
-    }
-
-    main {
-      position: relative;
-      min-height: calc(100vh - 160px);
-      padding: 3rem 2rem;
-    }
-
-    .overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.55);
-      backdrop-filter: blur(4px);
-      z-index: -1;
-    }
-
-    .container {
-      max-width: 1100px;
-      margin: 0 auto;
-      position: relative;
-      z-index: 2;
-    }
-
-    .page-header {
-      text-align: center;
-      margin-bottom: 3rem;
-      animation: fadeIn 1s ease;
-    }
-
-    .page-header h1 {
-      font-size: 3rem;
-      color: #ffc300;
-      margin-bottom: 0.5rem;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-    }
-
-    .page-header p {
-      font-size: 1.2rem;
-      color: #f2f2f2;
-      opacity: 0.9;
-    }
-
-    .section {
-      background: rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(10px);
-      border-left: 6px solid #ffc300;
-      border-radius: 15px;
-      padding: 2.5rem;
-      margin-bottom: 2rem;
-      box-shadow: 0 6px 25px rgba(0, 0, 0, 0.4);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      animation: slideUp 0.8s ease;
-    }
-
-    .section:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 30px rgba(255, 195, 0, 0.3);
-    }
-
-    .section h2 {
-      color: #ffc300;
-      font-size: 1.8rem;
-      text-transform: uppercase;
-      margin-bottom: 1rem;
-      letter-spacing: 1px;
-    }
-
-    .section p {
-      margin-bottom: 1rem;
-      color: #f2f2f2;
-      font-size: 1.05rem;
-      line-height: 1.8;
-    }
-
-    .features-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.5rem;
-      margin-top: 2rem;
-    }
-
-    .feature-card {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      border: 2px solid rgba(255, 195, 0, 0.3);
-      border-radius: 12px;
-      padding: 2rem;
-      text-align: center;
-      transition: all 0.3s ease;
-    }
-
-    .feature-card:hover {
-      border-color: #ffc300;
-      transform: translateY(-5px);
-      background: rgba(255, 195, 0, 0.1);
-    }
-
-    .feature-card .icon {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-
-    .feature-card h3 {
-      color: #ffc300;
-      font-size: 1.3rem;
-      margin-bottom: 0.8rem;
-    }
-
-    .feature-card p {
-      font-size: 0.95rem;
-      color: #e5e5e5;
-    }
-
-    .cta-section {
-      background: linear-gradient(135deg, rgba(255, 195, 0, 0.2), rgba(0, 119, 182, 0.2));
-      border: 2px solid #ffc300;
-      text-align: center;
-      padding: 3rem;
-      border-radius: 15px;
-      margin-top: 3rem;
-    }
-
-    .cta-section h2 {
-      color: #ffc300;
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-
-    .cta-section p {
-      font-size: 1.1rem;
-      margin-bottom: 2rem;
-    }
-
-    .cta-buttons {
-      display: flex;
-      justify-content: center;
-      gap: 1.5rem;
-      flex-wrap: wrap;
-    }
-
-    .cta-buttons button {
-      background: #0077b6;
-      border: none;
-      color: white;
-      padding: 1rem 2.5rem;
-      border-radius: 50px;
-      cursor: pointer;
-      font-size: 1.1rem;
-      font-weight: 600;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    .cta-buttons button:hover {
-      background: #005f8d;
-      transform: translateY(-3px);
-    }
-
-    footer {
-      background: rgba(0, 0, 0, 0.75);
-      backdrop-filter: blur(8px);
-      color: #fff;
-      text-align: center;
-      padding: 1.5rem;
-      font-size: 0.9rem;
-      margin-top: 2rem;
-    }
-
-    footer a {
-      color: #ffc300;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes slideUp {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @media (max-width: 768px) {
-      .page-header h1 {
-        font-size: 2rem;
-      }
-
-      .section {
-        padding: 1.5rem;
-      }
-
-      nav {
-        flex-direction: column;
-      }
-
-      .nav-links {
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 1rem;
-      }
-
-      .features-grid {
-        grid-template-columns: 1fr;
-      }
-
-      .cta-buttons {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .cta-buttons button {
-        width: 80%;
-        max-width: 300px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="styles/WhatIsLakbay.css">
 </head>
 <body>
   <div class="overlay"></div>
@@ -309,7 +13,7 @@
   <header>
     <nav>
       <div class="logo">
-        <h2 onclick="window.location.href='LandingPage.html'">Lakbay</h2>
+        <h2 id="logo-heading">Lakbay</h2>
       </div>
       <ul class="nav-links">
         <li><a href="LandingPage.html">Home</a></li>
@@ -420,8 +124,8 @@
         <h2>Ready to Transform Your Commute?</h2>
         <p>Join thousands of Filipinos already using Lakbay for smarter, easier travel</p>
         <div class="cta-buttons">
-          <button onclick="window.location.href='RegistrationPage.html'">Register as Commuter</button>
-          <button onclick="window.location.href='RegistrationPage.html'">Register as Driver</button>
+          <button data-role="commuter">Register as Commuter</button>
+          <button data-role="driver">Register as Driver</button>
         </div>
       </div>
     </div>
@@ -430,5 +134,6 @@
   <footer>
     <p>&copy; 2025 <strong>LAKBAY</strong>. All Rights Reserved. | <a href="LandingPage.html">Back to Home</a></p>
   </footer>
+  <script src="scripts/WhatIsLakbay.js"></script>
 </body>
 </html>
